--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=ft_transcendence
 APP_ENV=development
 
-PUBLIC_API_URL=http://localhost:localdomain/api
-PUBLIC_WS_URL=ws://localhost:localdomain/ws
+PUBLIC_API_URL=http://localhost.localdomain/api
+PUBLIC_WS_URL=ws://localhost.localdomain/ws
 
 PORT=8080
 HOST=0.0.0.0
