--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,12 @@
   "description": "true",
   "main": "index.js",
   "scripts": {
-    "dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "dev": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch",
     "start": "browser-sync start --server 'src' --files 'src/**/*' --no-ui --port 3000 --reload-delay 10"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.12",
-    "browser-sync": "^2.27.11"
+    "browser-sync": "^2.27.11",
+    "tailwindcss": "^3.4.17"
   },
   "author": "",
   "license": "ISC"
