--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "test",
+  "name": "backend-database",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "type": "module",
+  "description": "",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "start:prod": "node dist/server.js"
+    "start": "node dist/main.js",
+    "dev": "tsx src/main.ts",
+    "db:init": "tsx src/scripts/initDB.ts",
+    "clean": "rm -rf dist"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/node": "^24.3.1",
+    "@types/sqlite3": "^3.1.11",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@fastify/static": "^8.2.0",
-    "@fastify/websocket": "^11.2.0",
-    "fastify": "5.5.0",
-    "fastify-plugin": "5.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "24.3.0",
-    "dotenv": "17.2.1",
-    "nodemon": "3.1.10",
-    "ts-node": "10.9.2",
-    "typescript": "^5.9.2"
+    "@fastify/cors": "^11.1.0",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/jwt": "^10.0.0",
+    "bcrypt": "^6.0.0",
+    "fastify": "^5.6.0",
+    "sqlite3": "^5.1.7",
+    "zod": "^4.1.5"
   }
 }
