building typesafe routes and responses for User table

--- a/backend_database/Dockerfile
+++ b/backend_database/Dockerfile
@@ -1,8 +1,14 @@
 # Use Node.js 18 LTS as base image
 FROM node:18-alpine
 
+# Install SQLite3
+RUN apk add --no-cache sqlite
+
 # Set working directory
 WORKDIR /app
+
+# Create database directory
+RUN mkdir -p /app/database
 
 # Copy package files first for better caching
 COPY package*.json ./
