--- a/backend_database/.devcontainer/devcontainer.json
+++ b/backend_database/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
     }
   },
   "forwardPorts": [3000, 3001],
-  "postCreateCommand": "npm install",
+  "postCreateCommand": "apt update && apt install -y sqlite3 libsqlite3-dev && npm install",
   "remoteUser": "root",
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached"
