--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,17 @@
   "description": "Frontend for the Transcendence web application.",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc --watch\" \"tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch\" \"browser-sync start --server 'src' --files 'src/**/*' --no-ui --port 4200 --reload-delay 10\"",
-    "start": "browser-sync start --server 'src' --files 'src/**/*' --no-ui --port 4200 --reload-delay 10"
+    "build": "mkdir -p dist dist/templates && cp src/index.html dist && cp src/templates/*.html dist/templates && tsc && tailwindcss -i ./src/css/input.css -o ./dist/css/output.css",
+    "predev": "mkdir -p dist dist/templates && cp src/index.html dist && cp src/templates/*.html dist/templates",
+    "prestart": "npm run build",
+    "dev": "concurrently \"tsc --watch\" \"tailwindcss -i ./src/css/input.css -o ./dist/css/output.css --watch\" \"browser-sync start --server 'dist' --files 'dist/**/*' --no-ui --port 4200 --reload-delay 10\"",
+    "start": "browser-sync start --server 'dist' --files 'dist/**/*' --no-ui --port 4200 --reload-delay 10"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "browser-sync": "^2.27.11",
     "concurrently": "^9.2.1",
+    "copyfiles": "^2.4.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2"
   },
