--- a/backend_database/Dockerfile
+++ b/backend_database/Dockerfile
@@ -25,8 +25,18 @@ RUN mkdir -p dist
 # Build TypeScript (compile to JS)
 RUN npx tsc
 
-# Expose port
-EXPOSE 3001
+# Set default environment variables (can be overridden)
+ENV NODE_ENV=production
+ENV PORT=3000
+ENV HOST=0.0.0.0
+ENV DATABASE_PATH=/app/data/database.db
+ENV LOG_LEVEL=info
+
+# Create data directory for database
+RUN mkdir -p /app/data
+
+# Expose port (use environment variable)
+EXPOSE $PORT
 
 # Start the application
-CMD ["npm", "run", "start:prod"]
+CMD ["npm", "run", "start"]
