--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -7,7 +7,6 @@
     "build": "tsc",
     "start": "node dist/main.js",
     "dev": "tsx src/main.ts",
-    "db:init": "tsx src/scripts/initDB.ts",
     "clean": "rm -rf dist"
   },
   "keywords": [],
@@ -15,19 +14,13 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@types/bcrypt": "6.0.0",
     "@types/node": "24.3.1",
     "@types/sqlite3": "3.1.11",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
   },
   "dependencies": {
-    "@fastify/cors": "11.1.0",
-    "@fastify/helmet": "13.0.1",
-    "@fastify/jwt": "10.0.0",
-    "bcrypt": "6.0.0",
     "fastify": "5.6.0",
-    "sqlite3": "5.1.7",
-    "zod": "4.1.5"
+    "sqlite3": "5.1.7" 
   }
 }
