--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "fastify": "5.6.0",
-    "sqlite3": "5.1.7" 
+    "fastify-plugin": "^5.0.1",
+    "sqlite3": "5.1.7"
   }
 }
