--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -20,6 +20,8 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "fastify": "5.6.0",
     "fastify-plugin": "^5.0.1",
     "sqlite3": "5.1.7"
