--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -14,14 +14,17 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "24.3.1",
     "@types/sqlite3": "3.1.11",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "@fastify/rate-limit": "^10.3.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "bcrypt": "^6.0.0",
     "fastify": "5.6.0",
     "fastify-plugin": "^5.0.1",
     "sqlite3": "5.1.7"
