--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -7,16 +7,22 @@
     "build": "tsc",
     "start": "node dist/main.js",
     "dev": "tsx src/main.ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "NODE_OPTIONS='--import=tsx/esm' jest",
+    "test:watch": "NODE_OPTIONS='--import=tsx/esm' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--import=tsx/esm' jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
     "@types/node": "24.3.1",
     "@types/sqlite3": "3.1.11",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "tsx": "4.20.5",
     "typescript": "5.9.2"
   },
