--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -8,9 +8,9 @@
     "start": "node dist/main.js",
     "dev": "tsx src/main.ts",
     "clean": "rm -rf dist",
-    "test": "NODE_OPTIONS='--import=tsx/esm' jest",
-    "test:watch": "NODE_OPTIONS='--import=tsx/esm' jest --watch",
-    "test:coverage": "NODE_OPTIONS='--import=tsx/esm' jest --coverage"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -20,11 +20,9 @@
     "@types/node": "24.3.1",
     "@types/sqlite3": "3.1.11",
     "@types/bcrypt": "^6.0.0",
-    "@types/jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
     "tsx": "4.20.5",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "@fastify/rate-limit": "^10.3.0",
