--- a/backend_database/.env.example
+++ b/backend_database/.env.example
@@ -10,3 +10,10 @@ NODE_ENV=development
 
 # Logging
 LOG_LEVEL=info
+
+JWT_ACCESS_SECRET=your-super-secret-access-key-change-this-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
+JWT_ACCESS_TTL=15m
+JWT_REFRESH_TTL=7d
+JWT_ISSUER=ping-pong-api
+JWT_AUDIENCE=ping-pong-clients
