--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -10,6 +10,7 @@
     "dev": "tsx watch src/main.ts"
   },
   "dependencies": {
+    "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.2.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^24.5.2",
     "@types/sqlite3": "^3.1.11",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
