--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@types/sqlite3": "3.1.11",
     "tsx": "4.20.5",
     "typescript": "5.9.2",
@@ -33,6 +35,8 @@
     "fastify": "5.6.0",
     "fastify-plugin": "^5.0.1",
     "jose": "^6.1.0",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "sqlite3": "5.1.7"
   }
 }
