fix: quick patch for main.js not found in db service

--- a/backend_database/Dockerfile
+++ b/backend_database/Dockerfile
@@ -39,4 +39,5 @@ RUN mkdir -p /app/data
 EXPOSE $PORT
 
 # Start the application
-CMD ["npm", "run", "start"]
+# CMD ["npm", "run", "start"]
+CMD ["npx", "tsx", "src/main.ts"]
