Add authentication routes and middleware; enforce user data access control

--- a/backend_database/.env.example
+++ b/backend_database/.env.example
@@ -31,3 +31,7 @@ GITHUB_REDIRECT_URI=http://localhost:3000/oauth/github/callback
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/oauth/google/callback
+
+# Route prefixes
+AUTH_ROUTE_PREFIX=/auth
+OAUTH_ROUTE_PREFIX=/oauth
