--- a/backend_database/.env.example
+++ b/backend_database/.env.example
@@ -32,6 +32,7 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:3000/oauth/google/callback
 
-# Route prefixes
-AUTH_ROUTE_PREFIX=/auth
-OAUTH_ROUTE_PREFIX=/oauth
+# Route Prefixes (optional - will use defaults if not set)
+AUTH_PREFIX=/auth
+OAUTH_PREFIX=/oauth
+API_PREFIX=/api
