--- a/backend_gamelogic/Dockerfile
+++ b/backend_gamelogic/Dockerfile
@@ -8,19 +8,19 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy source code
 COPY . .
 
-# Create dist directory
-RUN mkdir -p dist
+# Set default environment variables (can be overridden)
+ENV NODE_ENV=production
+ENV PORT=3001
+ENV HOST=0.0.0.0
+ENV LOG_LEVEL=info
 
-# Build TypeScript (compile to JS)
-RUN npx tsc
-
-# Expose port
-EXPOSE 3000
+# Expose port (use environment variable)
+EXPOSE $PORT
 
 # Start the application
-CMD ["npm", "run", "start:prod"]
+CMD ["npm", "run", "start"]
