--- a/backend_gamelogic/package.json
+++ b/backend_gamelogic/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "test",
+  "name": "backend-gamelogic",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Game logic server for ping-pong game",
+  "main": "dist/server.js",
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm src/server.ts",
     "build": "tsc",
-    "start:prod": "node dist/server.js"
+    "start": "node dist/server.js",
+    "dev": "tsx src/server.ts",
+    "clean": "rm -rf dist",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
+  "keywords": [],
+  "author": "",
   "dependencies": {
     "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.2.0",
-    "dotenv": "17.2.1",
-    "fastify": "5.5.0",
-    "fastify-plugin": "5.0.1"
+    "fastify": "5.6.0",
+    "fastify-plugin": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "24.3.0",
-    "nodemon": "3.1.10",
-    "ts-node": "10.9.2",
-    "typescript": "^5.9.2"
+    "@types/node": "^24.3.1",
+    "tsx": "4.20.5",
+    "typescript": "5.9.2",
+    "vitest": "^2.1.3"
   }
 }
