--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -17,14 +17,15 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "24.3.1",
     "@types/sqlite3": "3.1.11",
-    "@types/bcrypt": "^6.0.0",
     "tsx": "4.20.5",
     "typescript": "5.9.2",
     "vitest": "^2.1.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@fastify/rate-limit": "^10.3.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
