--- a/backend_gamelogic/.env.example
+++ b/backend_gamelogic/.env.example
@@ -1,6 +1,6 @@
 # Server Configuration
 PORT=3001
-HOST=::
+HOST=0.0.0.0
 
 # Environment
 NODE_ENV=development
@@ -16,4 +16,4 @@ BALL_SPEED=40
 PADDLE_SPEED=40
 PHYSICS_FPS=60
 RENDER_FPS=30
-MAX_SCORE=5
+MAX_SCORE=10
