--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     container_name: game
     ports:
       - "3001:3001"
+    # env_file:
+    #   - ./backend_gamelogic/.env.game
     restart: unless-stopped
     networks:
       - transendence
