--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     container_name: database
     volumes:
       - ./backend_database/database:/app/data
-    ports:
-      - "3000:3000"
     restart: unless-stopped
     networks:
       - transendence
@@ -17,8 +15,6 @@ services:
     build:
       context: ./backend_gamelogic
     container_name: game
-    ports:
-      - "3001:3001"
     # env_file:
     #   - ./backend_gamelogic/.env.game
     restart: unless-stopped
@@ -29,8 +25,21 @@ services:
     build:
       context: ./frontend
     container_name: frontend
+    restart: unless-stopped
+    networks:
+      - transendence
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
     ports:
-      - "4200:4200"
+      - "80:80"
+    volumes:
+      - ./ops/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - databank
+      - backend
     restart: unless-stopped
     networks:
       - transendence
