--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -25,8 +25,8 @@ http {
             proxy_pass http://backend:3001/;
         }
 
-        location /ws {
-            proxy_pass http://backend:3001;
+        location /ws/game {
+            proxy_pass http://backend:3001/game;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
