--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,10 @@ services:
     container_name: nginx-proxy
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./ops/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./.certs:/etc/nginx/certs:ro
     depends_on:
       - frontend
       - databank
