--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -4,6 +4,17 @@ http {
 
     server {
         listen 80;
+        server_name localhost.localdomain;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name localhost.localdomain;
+
+        ssl_certificate     /etc/nginx/certs/cert.pem;
+        ssl_certificate_key /etc/nginx/certs/key.pem;
+        ssl_protocols       TLSv1.2 TLSv1.3;
 
         location / {
             proxy_pass http://frontend:4200;
