feat: sceleton for more comprehensive ci tests

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -2,9 +2,11 @@ name: secrets
 
 on:
   push:
-    branches: [ "**" ]
+    branches-ignore: ["main"]
   pull_request:
-    branches: [ "**" ]
+    branches: ["main"]
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   check-secrets:
