fix: reverting erronious copilot suggestion

--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -42,9 +42,18 @@ http {
             # ===== END DELETE =====
         }
 
-        location ~ ^/(api|auth|oauth)/ {
-            proxy_pass http://databank:3000/;
+        location /api/ {
+            proxy_pass http://databank:3000/api/;
         }
+
+        location /auth/ {
+            proxy_pass http://databank:3000/auth/;
+        }
+
+        location /oauth/ {
+            proxy_pass http://databank:3000/oauth/;
+        }
+
         location /game/ {
             proxy_pass http://backend:3001/;
         }
