fix: corrected wss proxying

--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -12,10 +12,7 @@ http {
 
         location / {
             proxy_pass http://frontend:4200;
-            # ===== DELETE THIS LINE WHEN FRONTEND USES WSS:// =====
-            # TEMPORARY: Allow ws:// WebSockets from HTTPS pages until devs update frontend
-            add_header Content-Security-Policy "connect-src 'self' ws: wss:;" always;
-            # ===== END DELETE =====
+            add_header Content-Security-Policy "connect-src 'self';" always;
         }
 
         location /api/ {
@@ -39,6 +36,35 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /ws/lobby {
+            proxy_pass http://live-chat:3002/lobby;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /ws/chats/ {
+            proxy_pass http://live-chat:3002/chats/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
