--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
+    "@fastify/multipart": "^9.2.1",
     "@fastify/rate-limit": "^10.3.0",
+    "@fastify/static": "^8.2.0",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
     "bcrypt": "^6.0.0",
