--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -10,6 +10,7 @@
     "dev": "tsx watch src/main.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.2",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/static": "^8.2.0",
