--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/main.ts"
+    "dev": "tsx watch src/main.ts",
+    "test": "vitest"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -25,7 +26,9 @@
     "@types/node": "^24.5.2",
     "@types/sqlite3": "^3.1.11",
     "@types/ws": "^8.18.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
