refactored the architecture to utilize single websocket for all operations in the chat

--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -8,6 +8,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js",
     "test": "vitest"
   },
   "dependencies": {
