--- a/live-chat/.env.example
+++ b/live-chat/.env.example
@@ -5,6 +5,9 @@ HOST=::
 # Database Configuration  
 DATABASE_PATH=./src/database/database.db
 
+# Database URL
+AUTH_SERVICE_URL=http://localhost:3000
+
 # Environment
 NODE_ENV=development
 
