chore: centralized env handling for live-chat

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,39 @@
+# =============================================================================
+# Global Application Configuration
+# =============================================================================
 APP_NAME=ft_transcendence
-APP_ENV=development
+NODE_ENV=prod
 
+# Public URLs (for frontend)
 PUBLIC_API_URL=http://localhost.localdomain/api
 PUBLIC_WS_URL=ws://localhost.localdomain/ws
 
+# =============================================================================
+# Backend Database Service (databank)
+# =============================================================================
 PORT=8080
 HOST=0.0.0.0
-SESSION_SECRET=your_session_secret_here
+SESSION_SECRET=your_session_secret_here_change_in_production
 
 DB_CLIENT=sqlite
 DB_CONNECTION=./data/db.sqlite3
 
+# =============================================================================
+# Live Chat Service
+# =============================================================================
+LIVECHAT_PORT=3002
+LIVECHAT_HOST=0.0.0.0
+LIVECHAT_DATABASE_PATH=/app/data/database.db
+AUTH_SERVICE_URL=http://databank:3000
+
+# =============================================================================
+# Logging
+# =============================================================================
+LOG_LEVEL=info
+
+# =============================================================================
+# TLS/SSL Configuration
+# =============================================================================
 TLS_CERT_PATH=./.certs/cert.pem
 TLS_KEY_PATH=./.certs/key.pem
 TLS_CA_PATH=./.certs/rootCA.pem
