chore: centralized env handling for frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,11 @@ RUN npm ci
 
 COPY . .
 
+# Make entrypoint script executable
+RUN chmod +x /usr/src/app/entrypoint.sh
+
 EXPOSE 4200
 
+# Use entrypoint to inject env vars at runtime
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
 CMD ["npm", "start"]
