--- a/ops/nginx.conf
+++ b/ops/nginx.conf
@@ -4,7 +4,7 @@ http {
 
     server {
         listen 8443 ssl;
-        server_name localhost.localdomain;
+        server_name localhost;
 
         ssl_certificate     /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
