--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,45 @@
 # =============================================================================
+# ARCHITECTURE OVERVIEW
+# =============================================================================
+# This application uses a microservices architecture with NGINX as a reverse proxy:
+#
+# Browser --> NGINX:8443 (TLS/SSL) --> Internal Services
+#              ├─ /         --> frontend:4200
+#              ├─ /api/     --> databank:3000
+#              ├─ /auth/    --> databank:3000
+#              ├─ /oauth/   --> databank:3000
+#              ├─ /game/    --> backend:3001
+#              └─ /ws/game  --> backend:3001 (WebSocket)
+#
+# All internal service ports are ONLY accessible within the Docker network.
+# External access is ONLY through NGINX on the configured NGINX_PORT.
+#
+# =============================================================================
 # Global Application Configuration
 # =============================================================================
 APP_NAME=ft_transcendence
 NODE_ENV=prod
 
-# Public URLs (for frontend)
-PUBLIC_API_URL=http://localhost.localdomain/api
-PUBLIC_WS_URL=ws://localhost.localdomain/ws
+# =============================================================================
+# NGINX Reverse Proxy (Public Gateway)
+# =============================================================================
+# External port exposed to host machine
+NGINX_PORT=8443
+NGINX_HOST=localhost
+
+# Public URLs (what the browser uses to connect)
+# These should match your NGINX configuration
+PUBLIC_API_URL=https://localhost:8443/api
+PUBLIC_WS_URL=wss://localhost:8443/ws
 
 # =============================================================================
-# Backend Database Service (databank)
+# Frontend Service (Internal)
+# =============================================================================
+# Internal port - only accessible within Docker network
+FRONTEND_PORT=4200
+
+# =============================================================================
+# Backend Database Service (databank - Internal)
 # =============================================================================
 DATABANK_PORT=3000
 DATABANK_HOST=0.0.0.0
