--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,10 @@ services:
     build:
       context: ./frontend
     container_name: frontend
+    environment:
+      # Public URLs (injected into browser at runtime)
+      - PUBLIC_API_URL=${PUBLIC_API_URL:-https://localhost:8443/api}
+      - PUBLIC_WS_URL=${PUBLIC_WS_URL:-wss://localhost:8443/ws}
     restart: unless-stopped
     networks:
       - transcendence
@@ -75,7 +79,7 @@ services:
     image: nginx:alpine
     container_name: nginx-proxy
     ports:
-      - "8443:8443"
+      - "${NGINX_PORT:-8443}:8443"
     volumes:
       - ./ops/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./.certs:/etc/nginx/certs:ro
