--- a/live-chat/Dockerfile
+++ b/live-chat/Dockerfile
@@ -49,7 +49,7 @@ EXPOSE $PORT
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:${PORT}/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+  CMD node -e "require('http').get('http://127.0.0.1:${PORT}/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Start the application using compiled JavaScript
 CMD ["node", "dist/main.js"]
