feat: easy switch between privileged and unprivileged ports

--- a/.env.example
+++ b/.env.example
@@ -23,12 +23,14 @@ NODE_ENV=prod
 # =============================================================================
 # NGINX Reverse Proxy (Public Gateway)
 # =============================================================================
-# External port exposed to host machine
-NGINX_PORT=8443
+# HTTPS port (443 for production, 8443 for school PCs)
+NGINX_HTTPS_PORT=8443
+# HTTP port - redirects to HTTPS (80 for production, 8080 for school PCs)
+NGINX_HTTP_PORT=8080
 NGINX_HOST=localhost
 
 # Public URLs (what the browser uses to connect)
-# These should match your NGINX configuration
+# These should match your NGINX_HTTPS_PORT
 PUBLIC_API_URL=https://localhost:8443/api
 PUBLIC_WS_URL=wss://localhost:8443/ws
 
