fix: removed tests dir from secrets checking

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -65,7 +65,7 @@ jobs:
           echo "Checking for hardcoded credentials..."
 
           # Check for common credential keywords in code
-          if grep -r -E -i "(password|secret|key|token)\s*[:=]\s*[\"'][^\"']{3,}[\"']" --include="*.js" --include="*.ts" --exclude-dir=".git" --exclude-dir="node_modules" . 2>/dev/null | grep -v -E "(test|mock|example|placeholder|your_|INSERT_|CHANGE_ME)" | head -10; then
+          if grep -r -E -i "(password|secret|key|token)\s*[:=]\s*[\"'][^\"']{3,}[\"']" --include="*.js" --include="*.ts" --exclude-dir=".git" --exclude-dir="node_modules" --exclude-dir="tests" . 2>/dev/null | grep -v -E "(test|mock|example|placeholder|your_|INSERT_|CHANGE_ME)" | head -10; then
             echo "WARNING: Found potential hardcoded credentials. Please review the above matches."
             echo "Note: Review if these are actual secrets or just test/example values."
           else
