--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run tests
         run: npm test
 
+      # TODO: Remove continue-on-error once coverage thresholds are properly configured
       - name: Generate coverage report
         run: npm run test:coverage
         continue-on-error: true
@@ -53,6 +54,7 @@ jobs:
       - name: Run tests
         run: npm test
 
+      # TODO: Remove continue-on-error once coverage thresholds are properly configured
       - name: Generate coverage report
         run: npm run test:coverage
         continue-on-error: true
@@ -79,6 +81,7 @@ jobs:
       - name: Build application
         run: npm run build
 
+      # TODO: Add proper frontend tests - currently frontend has no test script in package.json
       - name: Run frontend tests (if available)
         run: npm test
         continue-on-error: true
@@ -105,6 +108,7 @@ jobs:
       - name: Run tests
         run: npm test
 
+      # TODO: Remove continue-on-error once coverage thresholds are properly configured
       - name: Generate coverage report
         run: npm run test:coverage
         continue-on-error: true
