--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,18 @@ APP_NAME=ft_transcendence
 NODE_ENV=production
 
 # =============================================================================
+# Public-Facing URL Configuration
+# =============================================================================
+# These are used for OAuth callbacks, CORS origins, and WebSocket URLs
+# For local development with NGINX proxy:
+PUBLIC_HOST=localhost
+PUBLIC_PORT=8443
+PUBLIC_PROTOCOL=https
+
+# CORS allowed origins (comma-separated list)
+CORS_ORIGINS=https://localhost:8443,http://localhost:4200
+
+# =============================================================================
 # NGINX Reverse Proxy (Public Gateway)
 # =============================================================================
 # HTTPS port (443 for production, 8443 for school PCs)
@@ -64,10 +76,12 @@ JWT_REFRESH_TTL=7d
 OAUTH_STATE_SECRET=dev-oauth-state-secret-change-me
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_REDIRECT_URI=http://localhost:3000/oauth/github/callback
+# Leave empty to auto-generate based on PUBLIC_HOST/PUBLIC_PORT/PUBLIC_PROTOCOL
+GITHUB_REDIRECT_URI=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://localhost:3000/oauth/google/callback
+# Leave empty to auto-generate based on PUBLIC_HOST/PUBLIC_PORT/PUBLIC_PROTOCOL
+GOOGLE_REDIRECT_URI=
 
 # =============================================================================
 # Game Logic Service (backend)
