--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -19,8 +19,14 @@ server {
         add_header Content-Security-Policy "connect-src 'self';" always;
     }
 
+    # API routes - strip /api prefix when proxying to backend
     location /api/ {
-        proxy_pass http://databank:${DATABANK_PORT}/api/;
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://databank:${DATABANK_PORT};
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /auth/ {
