fix: Update route prefix defaults to /api namespace
- AUTH_PREFIX now defaults to /api/auth (was /auth)
- OAUTH_PREFIX now defaults to /api/oauth (was /oauth)
- API_PREFIX remains /api
- Updated .env.example files to reflect new structure
- OAuth redirect URIs updated to /api/oauth/* paths
- Fixes all unit tests by aligning config with actual route registration
- Routes accessible at: /api/auth/*, /api/oauth/*, /api/users/*, etc.

--- a/.env.example
+++ b/.env.example
@@ -59,9 +59,9 @@ DATABANK_PORT=3000
 DATABANK_HOST=0.0.0.0
 DATABANK_DATABASE_PATH=/app/data/database.db
 
-# Route prefixes
-AUTH_PREFIX=/auth
-OAUTH_PREFIX=/oauth
+# Route prefixes (all API routes are under /api)
+AUTH_PREFIX=/api/auth
+OAUTH_PREFIX=/api/oauth
 API_PREFIX=/api
 
 # JWT Configuration
