--- a/backend_database/.env.example
+++ b/backend_database/.env.example
@@ -25,14 +25,15 @@ OAUTH_STATE_SECRET=your-oauth-state-secret-change-this-in-production
 # GitHub OAuth (Get from: https://github.com/settings/developers)
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
-GITHUB_REDIRECT_URI=http://localhost:3000/oauth/github/callback
+GITHUB_REDIRECT_URI=http://localhost:3000/api/oauth/github/callback
 
 # Google OAuth (Get from: https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/oauth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/oauth/google/callback
 
 # Route Prefixes (optional - will use defaults if not set)
-AUTH_PREFIX=/auth
-OAUTH_PREFIX=/oauth
+# All API routes are under /api namespace
+AUTH_PREFIX=/api/auth
+OAUTH_PREFIX=/api/oauth
 API_PREFIX=/api
