fix: removing duplicate nginx conf

--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -3,8 +3,8 @@ FROM nginx:alpine
 # Install envsubst (part of gettext package)
 RUN apk add --no-cache gettext
 
-# Copy template
-COPY nginx.conf.template /etc/nginx/templates/nginx.conf.template
+# Copy template to a different location (not /etc/nginx/templates/ to avoid auto-processing)
+COPY nginx.conf.template /etc/nginx/nginx.conf.template
 
 # Copy custom entrypoint
 COPY nginx-entrypoint.sh /docker-entrypoint.d/40-custom-template.sh
