--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,4 @@
+# Frontend nginx - Static file server
 server {
     listen 4200;
     server_name localhost;
@@ -5,13 +6,47 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # SPA routing: fallback to index.html for client-side routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Serve static assets with cache headers
-    location ~* \.(?:css|js|jpg|jpeg|png|gif|svg|ico|woff2|woff|ttf)$ {
-        expires 7d;
-        add_header Cache-Control "public, no-transform";
+    # Static assets with aggressive caching
+    location ~* \.(?:css|js|map)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
     }
+
+    # Media files
+    location ~* \.(?:jpg|jpeg|png|gif|svg|ico|webp|avif)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Fonts
+    location ~* \.(?:woff2|woff|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Disable access logs for health checks
+    location = /health {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
+    }
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml+rss;
 }
