--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -1,4 +1,4 @@
-# HTTP server - redirect all traffic to HTTPS with 301 Moved Permanently
+# HTTP server - redirect all traffic to HTTPS
 server {
     listen ${NGINX_HTTP_PORT};
     server_name ${NGINX_HOST};
@@ -16,10 +16,13 @@ server {
 
     location / {
         proxy_pass http://frontend:${FRONTEND_PORT};
-        add_header Content-Security-Policy "connect-src 'self';" always;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # API routes - includes /api/auth, /api/oauth, /api/users, etc.
+    # API routes
     location /api/ {
         proxy_pass http://databank:${DATABANK_PORT}/api/;
         proxy_set_header Host $host;
@@ -28,7 +31,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Direct auth/oauth routes for backward compatibility - redirect to /api namespace
+    # Backward compatibility routes
     location /auth/ {
         proxy_pass http://databank:${DATABANK_PORT}/api/auth/;
         proxy_set_header Host $host;
@@ -49,6 +52,7 @@ server {
         proxy_pass http://backend:${GAMELOGIC_PORT}/;
     }
 
+    # WebSocket routes
     location /ws/game {
         proxy_pass http://backend:${GAMELOGIC_PORT}/game;
         proxy_http_version 1.1;
